<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:id="@+id/user"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="ALCwithGoogle 3.0 Networking Quiz Final Project"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/question1"
                android:textSize="16sp" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/compu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionOne"
                    android:text="Type of computer" />

                <RadioButton
                    android:id="@+id/net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionOne"
                    android:text="Type of network cable" />

                <RadioButton
                    android:id="@+id/pop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionOne"
                    android:text="Popular technologies and standards for wireless computer networking" />

                <RadioButton
                    android:id="@+id/prog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionOne"
                    android:text="Computer programs that help people make money on the Internet" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/question2"
                android:textSize="16sp" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/comp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionTwo"
                    android:text="To make home computers run faster" />

                <RadioButton
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionTwo"
                    android:text="To enable safe sharing of resources among network devices in the home" />

                <RadioButton
                    android:id="@+id/build"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionTwo"
                    android:text="To help people build Web sites" />

                <RadioButton
                    android:id="@+id/boil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionTwo"
                    android:text="To boil water" />
            </RadioGroup>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="An IP address is a numeric quantity that identifies… (Select all correct answers )"
                android:textSize="16sp" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionThree"
                    android:text="A network adapter to other devices on the network" />

                <RadioButton
                    android:id="@+id/manufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionThree"
                    android:text="The manufacturer of a computer" />

                <RadioButton
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionThree"
                    android:text="The physical location of a computer" />

                <RadioButton
                    android:id="@+id/none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionThree"
                    android:text="None of these answers" />
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/question4"
                android:textSize="16sp" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"

                >

                <RadioButton
                    android:id="@+id/lan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionFour"
                    android:text="LAN" />

                <RadioButton
                    android:id="@+id/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionFour"
                    android:text="MAN" />

                <RadioButton
                    android:id="@+id/san"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionFour"
                    android:text="SAN" />

                <RadioButton
                    android:id="@+id/wan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="questionFour"
                    android:text="WAN" />


            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/question5"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionFive"
                android:text="Connecting to a home network router" />

            <CheckBox
                android:id="@+id/wf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionFive"
                android:text="Connecting to a Wi-Fi hotspot" />

            <CheckBox
                android:id="@+id/another"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionFive"
                android:text="Communicating with another computer using TCP" />

            <CheckBox
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionFive"
                android:text="Playing media from the hard drive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/question6"
                android:textSize="16sp" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:id="@+id/question6"
                android:ems="10"/>


            <Button

                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Get Quiz Score"
                    android:onClick="getScore"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"

                    />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>